--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@lugobots/lugo4node": "^1.0.1-beta.2-rc.2",
-    "@tensorflow/tfjs-node": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0"
   },
   "devDependencies": {
     "tensor-flow": "^0.0.1",
