Simplified collision detection and sensors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "dist",
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "typeRoots": ["./src"]
+    "typeRoots": ["./src"],
+    "sourceMap": true
   }
 }
