--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Rubens Silva <rubens21@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@lugobots/lugo4node": "^1.0.1-beta.2-rc.2",
+    "@lugobots/lugo4node": "^1.0.1-beta.2",
     "@types/seedrandom": "^3.0.4",
     "convnetjs": "^0.3.0",
     "sarsa": "^1.0.1",
